# hakunix

./: Cargo.toml  Makefile
.cargo/: config.toml
src/: global_descriptor_table.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  multiboot_header.asm
tests/: stack_overflow.rs
